Temporary increase of JVM memory for server tests