@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.codehaus.sonar</groupId>
     <artifactId>server</artifactId>
@@ -11,6 +11,10 @@
   <artifactId>sonar-server</artifactId>
   <packaging>jar</packaging>
   <name>SonarQube :: Server</name>
+
+  <properties>
+    <argLine>-Xmx1G -Djava.awt.headless=true -XX:MaxPermSize=128m</argLine>
+  </properties>
 
   <dependencies>
     <dependency>
